--- a/lee.somin/initializr/css/theme.css
+++ b/lee.somin/initializr/css/theme.css
@@ -1,3 +1,13 @@
+html {
+	width: 100%;
+}
+
+body {
+	margin: 0;
+	background: #F1F0F0;
+	font-family: helvetica, sans-serif;
+}
+
 .wrapper {
    max-width:1000px;
    margin-right:auto;
